# OnPoint_Assesment

./: README.md  main.py  pyproject.toml
notebooks/: rag_with_hugging_face_gemma_mongodb.ipynb
qdrant_db/: meta.json
qdrant_db/collection/wdm_ai_temis/: storage.sqlite
utils/: file_loader.py  parser.py  rag.py  setting.py  vectorstore.py
