[project]
name = "onpoint-assesment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.26",
    "langchain-google-vertexai>=2.0.27",
    "langchain-huggingface>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "loguru>=0.7.3",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.14.3",
    "ragas>=0.2.15",
    "streamlit>=1.46.1",
    "torch>=2.7.1",
]
